--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Point System</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+        .section { display: none; }
+    </style>
 </head>
 <body>
     <h1>Welcome to the Game Point System!</h1>
-    <p>Current Points: <span id="points">{{ points }}</span></p>
-    <p>Casual Games Played Today: <span id="casual_games_played">{{ casual_games_played }}</span></p>
+    <p>Current Points: <span id="points">0</span></p>
+    <p>Casual Games Played Today: <span id="casualGamesPlayed">0</span></p>
 
     <h2>Options</h2>
     <button onclick="showSection('casual-game')">Play a casual game</button>
@@ -17,109 +19,120 @@
     <button onclick="showSection('buy-power-up')">Buy a power-up</button>
     <button onclick="showSection('add-time')">Add time played</button>
 
-    <div id="casual-game" class="option-section" style="display:none;">
+    <div id="casual-game" class="section">
         <h3>Play a Casual Game</h3>
-        <form id="casualGameForm">
-            <label for="score">Score:</label>
-            <input type="number" id="score" name="score" required>
-            <label for="won_game">Did you win the game?</label>
-            <select id="won_game" name="won_game">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-            <button type="submit">Submit</button>
-        </form>
+        <label for="casualScore">Score:</label>
+        <input type="number" id="casualScore" required>
+        <label for="casualWon">Did you win the game?</label>
+        <select id="casualWon">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select>
+        <button onclick="playCasualGame()">Submit</button>
     </div>
 
-    <div id="competitive-game" class="option-section" style="display:none;">
+    <div id="competitive-game" class="section">
         <h3>Play a Competitive Game</h3>
-        <form id="competitiveGameForm">
-            <label for="score">Score:</label>
-            <input type="number" id="score" name="score" required>
-            <label for="won_game">Did you win the game?</label>
-            <select id="won_game" name="won_game">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-            <button type="submit">Submit</button>
-        </form>
+        <label for="compScore">Score:</label>
+        <input type="number" id="compScore" required>
+        <label for="compWon">Did you win the game?</label>
+        <select id="compWon">
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+        </select>
+        <button onclick="playCompetitiveGame()">Submit</button>
     </div>
 
-    <div id="buy-power-up" class="option-section" style="display:none;">
+    <div id="buy-power-up" class="section">
         <h3>Buy a Power-Up</h3>
-        <form id="buyPowerUpForm">
-            <select id="power_up" name="power_up">
-                <option value="coaching_session">Coaching Session (5000 points)</option>
-                <option value="new_workshop_map">New Workshop Map (5000 points)</option>
-                <option value="que_with_pro">Que with Pro (7500 points)</option>
-            </select>
-            <button type="submit">Buy</button>
-        </form>
+        <select id="powerUp">
+            <option value="coaching_session">Coaching Session (5000 points)</option>
+            <option value="new_workshop_map">New Workshop Map (5000 points)</option>
+            <option value="que_with_pro">Que with Pro (7500 points)</option>
+        </select>
+        <button onclick="buyPowerUp()">Buy</button>
     </div>
 
-    <div id="add-time" class="option-section" style="display:none;">
+    <div id="add-time" class="section">
         <h3>Add Time Played</h3>
-        <form id="addTimePlayedForm">
-            <label for="time_played">Time Played (hours):</label>
-            <input type="number" id="time_played" name="time_played" step="0.1" required>
-            <button type="submit">Add</button>
-        </form>
+        <label for="timePlayed">Time Played (hours):</label>
+        <input type="number" id="timePlayed" step="0.1" required>
+        <button onclick="addTimePlayed()">Add</button>
     </div>
 
     <script>
+        let points = 0;
+        let casualGamesPlayed = 0;
+
         function showSection(sectionId) {
-            document.querySelectorAll('.option-section').forEach(section => {
+            document.querySelectorAll('.section').forEach(section => {
                 section.style.display = 'none';
             });
             document.getElementById(sectionId).style.display = 'block';
         }
 
-        $(document).ready(function() {
-            $('#casualGameForm').on('submit', function(e) {
-                e.preventDefault();
-                $.post('/play_casual_game', $(this).serialize(), function(data) {
-                    if (data.success) {
-                        $('#points').text(data.points);
-                        $('#casual_games_played').text(data.casual_games_played);
-                    } else {
-                        alert(data.message);
-                    }
-                });
-            });
+        function playCasualGame() {
+            if (casualGamesPlayed >= 5) {
+                alert('Daily limit reached');
+                return;
+            }
+            const score = parseInt(document.getElementById('casualScore').value);
+            const wonGame = document.getElementById('casualWon').value;
 
-            $('#competitiveGameForm').on('submit', function(e) {
-                e.preventDefault();
-                $.post('/play_competitive_game', $(this).serialize(), function(data) {
-                    if (data.success) {
-                        $('#points').text(data.points);
-                    } else {
-                        alert(data.message);
-                    }
-                });
-            });
+            if (wonGame === 'yes') {
+                points += 250;
+            }
+            points += Math.floor(score / 2);
+            casualGamesPlayed += 1;
 
-            $('#buyPowerUpForm').on('submit', function(e) {
-                e.preventDefault();
-                $.post('/buy_power_up', $(this).serialize(), function(data) {
-                    if (data.success) {
-                        $('#points').text(data.points);
-                    } else {
-                        alert(data.message);
-                    }
-                });
-            });
+            document.getElementById('points').textContent = points;
+            document.getElementById('casualGamesPlayed').textContent = casualGamesPlayed;
+        }
 
-            $('#addTimePlayedForm').on('submit', function(e) {
-                e.preventDefault();
-                $.post('/add_time_played', $(this).serialize(), function(data) {
-                    if (data.success) {
-                        $('#points').text(data.points);
-                    } else {
-                        alert(data.message);
-                    }
-                });
-            });
-        });
+        function playCompetitiveGame() {
+            const score = parseInt(document.getElementById('compScore').value);
+            const wonGame = document.getElementById('compWon').value;
+
+            if (points < 1000) {
+                alert('Not enough points to play a competitive game');
+                return;
+            }
+            points -= 1000;
+
+            if (wonGame === 'yes') {
+                points += 250;
+            }
+            points += Math.floor(score / 2);
+
+            document.getElementById('points').textContent = points;
+        }
+
+        function buyPowerUp() {
+            const powerUp = document.getElementById('powerUp').value;
+            const costs = {
+                'coaching_session': 5000,
+                'new_workshop_map': 5000,
+                'que_with_pro': 7500
+            };
+
+            if (points >= costs[powerUp]) {
+                points -= costs[powerUp];
+                document.getElementById('points').textContent = points;
+                alert('Power-up bought successfully');
+            } else {
+                alert('Not enough points');
+            }
+        }
+
+        function addTimePlayed() {
+            const timePlayed = parseFloat(document.getElementById('timePlayed').value);
+            const pointsPerInterval = 1000;
+            const intervalDuration = 33; // minutes
+            const intervalsPlayed = Math.floor(timePlayed * 60 / intervalDuration);
+            points += intervalsPlayed * pointsPerInterval;
+
+            document.getElementById('points').textContent = points;
+        }
     </script>
 </body>
 </html>
